--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,7 +32,8 @@
 
     <div class="content">
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="SEO should include content, headings in proper order, mobile compatibility, social media, link building and a backlink."
+            <img src="./assets/images/search-engine-optimization.jpg"
+                alt="SEO should include content, headings in proper order, mobile compatibility, social media, link building and a backlink."
                 class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
