--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>HORISEON: Search Engine Optimization. Online Reputation Management.Social Media Marketing and more</title>
 </head>
+<!-- title now includes name of the Brand/Company and displays main advantages/products -->
 
 <body>
-    <header>
+    <header> 
+        <!-- removing class from header and leaving it as a header only -->
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
+            <!-- replacing it with navigation -->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -32,7 +35,8 @@
     <main>
         <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
-                alt="search optimization image" /></img>
+                alt="search optimization image" /></img> 
+                <!-- adding alt and adding id -->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -40,6 +44,7 @@
                 your visibility and find the right customers for your business.
             </p>
         </article>
+        <!-- instead of divs using sematic elements such as article -->
         <article id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation image"
                 class="float-right" />
@@ -62,6 +67,7 @@
         </article>
     </main>
     <aside>
+        <!-- using sematic element aside and adding sections instead of divs -->
         <section>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" class="benefit-lead img" alt="Lead generation image" />
@@ -88,6 +94,7 @@
         </section>
     </aside>
     <footer>
+        <!-- removing class from footer and updating h2 to h4 -->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
